Ban - Move Close user details button Diary - Fix overflow

--- a/apphub-service/apphub-service-diary/src/main/resources/public/res/diary/css/diary.css
+++ b/apphub-service/apphub-service-diary/src/main/resources/public/res/diary/css/diary.css
@@ -77,6 +77,7 @@
                     margin: 0.25rem 0;
                     padding: 0.125rem;
                     text-align: left;
+                    overflow-x: auto;
                 }
 
                     .calendar-event.button:hover{
